## $Id$

SUBDIRS = hicolor gnome

## FIXME: move those to theme icons
pixmapdatadir = $(datadir)/$(PACKAGE)/pixmaps
pixmapdata_DATA = \
	popup-menu.png \
	\
	prefs-audio-card.png \
	prefs-input-gaming.png \
	prefs-input-keyboard.png \
	\
	stock_repeat.png \
	stock_volume.png

# these are in gtk since 2.6
#	stock_media-fwd.png \
#	stock_media-pause.png \
#	stock_media-play.png \
#	stock_media-prev.png \
#	stock_media-rec.png \
#	stock_media-rew.png \
#	stock_media-stop.png

EXTRA_DIST = $(pixmapdata_DATA)

